--- a/templates/index.html
+++ b/templates/index.html
@@ -51,33 +51,34 @@
             border-radius: 5px;
         }
 
-        button[type="submit"] {
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        button[type="submit"]:hover {
-            background-color: #0056b3;
-        }
-
         .tool-info {
             margin-top: 30px;
+        }
+
+        .tool-info .card {
+            position: relative;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            background-color: #fff;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .tool-info h2 {
             font-size: 24px;
             font-weight: bold;
-            background: linear-gradient(to right, #007bff, #0056b3);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
             margin-bottom: 10px;
+            text-transform: uppercase;
+            color: #007bff;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .tool-info .rating {
+            font-size: 18px;
+            color: #000;
         }
 
         .tool-info p {
@@ -85,35 +86,72 @@
             margin-bottom: 10px;
         }
 
-        .tool-info ul {
-            list-style-type: none;
-            padding-left: 0;
-            margin-bottom: 15px;
+        .tool-info .tags {
+            display: inline-block;
+            background-color: #000;
+            color: #fff;
+            padding: 2px 8px;
+            border-radius: 5px;
+            font-size: 12px;
+            margin-right: 5px;
         }
 
-        .tool-info ul li {
-            margin-bottom: 5px;
-            position: relative;
+        .tool-info .tags.popular {
+            background-color: red; /* Red color for popular tag */
+        }
+
+        .tool-info .pros-cons .toggle-button {
+            cursor: pointer;
+            background-color: #000;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+
+        .tool-info .pros-cons .content {
+            display: none;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .tool-info .pros-cons .content > div {
+            width: 48%;
+        }
+
+        .tool-info .pros {
             padding-left: 20px;
         }
 
-        .tool-info ul li:before {
+        .tool-info .cons {
+            padding-left: 20px;
+        }
+
+        .tool-info .pros ul, .tool-info .cons ul {
+            padding-left: 0;
+            list-style-type: none;
+        }
+
+        .tool-info .pros h3, .tool-info .cons h3 {
+            display: flex;
+            align-items: center;
+        }
+
+        .tool-info .pros h3::before, .tool-info .cons h3::before {
             content: '';
-            font-family: 'Font Awesome 5 Free';
-            font-weight: 700;
-            position: absolute;
-            left: 0;
-            top: 0;
+            display: inline-block;
             width: 10px;
             height: 10px;
             border-radius: 50%;
+            margin-right: 10px;
         }
 
-        .tool-info .pros ul li:before {
+        .tool-info .pros h3::before {
             background-color: #28a745; /* Green color for pros */
         }
 
-        .tool-info .cons ul li:before {
+        .tool-info .cons h3::before {
             background-color: #dc3545; /* Red color for cons */
         }
 
@@ -125,11 +163,6 @@
 
         .tool-info a:hover {
             color: #0056b3;
-        }
-
-        .tool-info .tool-cat {
-            font-size: 14px !important; /* Smaller font size */
-            color: #555 !important; /* Gray color */
         }
 
         .tool-info hr {
@@ -153,11 +186,15 @@
         <form id="toolTypeForm">
             <label for="toolType">Select Tool Type:</label>
             <select id="toolType" name="toolType">
+                <option value="" disabled selected>Select</option>
+                <option value="All">All</option>
                 <option value="Image">Image</option>
                 <option value="AI Chatbot">AI Chatbot</option>
                 <option value="Video">Video</option>
+                <option value="Text">Text</option>
+                <option value="Code">Code</option>
+
             </select>
-            <button type="submit">Filter</button>
         </form>
         
         <div id="toolList" class="tool-info"></div>
@@ -166,19 +203,21 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function(){
-            $('#toolTypeForm').submit(function(event){
-                event.preventDefault();
+            $('#toolTypeForm select').change(function() {
                 var toolType = $('#toolType').val();
                 if (toolType) {
                     $.ajax({
                         type: 'POST',
                         url: '/filter_tools',
-                        data: { toolType: toolType },
+                        data: { toolType: toolType},
                         success: function(response){
                             var tools = JSON.parse(response);
+                            tools.sort((a, b) => b.RATING - a.RATING);
                             displayTools(tools);
                         }
                     });
+                    // Hide the "Select" option once another option is selected
+                    $('#toolType option[value=""][disabled]').remove();
                 }
             });
 
@@ -187,25 +226,33 @@
                 toolList.empty();
                 tools.forEach(function(tool){
                     var prosLines = tool.PROS.split('\n').map(function(line) {
-                        return `<li>${line}</li>`;
-                    }).join('');
+                        return `<li><strong>${line}</strong></li>`;
+                    }).join('<br><br>');
                     var consLines = tool.CONS.split('\n').map(function(line) {
-                        return `<li>${line}</li>`;
-                    }).join('');
+                        return `<li><strong>${line}</strong></li>`;
+                    }).join('<br><br>');
+
+                    var popularTag = tool.POPULAR ? '<span class="tags popular">Popular</span>' : ''; // Adding Popular tag if tool is popular
                     var toolInfo = `
                         <div class="card">
-                            <h2>${tool.TOOL_NAME} - <span class="tool-cat">${tool.CAT} - ${tool.SUB_CAT}</span></h2>
+                            <h2>${tool.TOOL_NAME} <span class="rating">Rating: ${tool.RATING}</span></h2>
+                            ${popularTag}
+                            <p class="tags">${tool.CAT}</p>
+                            <p class="tags">${tool.SUB_CAT}</p>
                             <img src="${tool.ICON}" alt="${tool.TOOL_NAME}" class="tool-icon">
                             <p><strong>Link:</strong> <a href="${tool.LINK}" target="_blank">${tool.LINK}</a></p>
                             <p><strong>Type:</strong> ${tool.TYPE}</p>
                             <div class="pros-cons">
-                                <div class="pros">
-                                    <p><strong>Pros:</strong></p>
-                                    <ul>${prosLines}</ul>
-                                </div>
-                                <div class="cons">
-                                    <p><strong>Cons:</strong></p>
-                                    <ul>${consLines}</ul>
+                                <div class="toggle-button">Pros & Cons</div>
+                                <div class="content" style="display: none;">
+                                    <div class="pros">
+                                        <h3>Pros</h3>
+                                        <ul>${prosLines}</ul>
+                                    </div>
+                                    <div class="cons">
+                                        <h3>Cons</h3>
+                                        <ul>${consLines}</ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -213,9 +260,16 @@
                     `;
                     toolList.append(toolInfo);
                 });
+
+                $('.toggle-button').click(function() {
+                    // Close all other expanded sections
+                    $('.content').not($(this).next('.content')).slideUp();
+                    // Toggle the clicked section
+                    $(this).next('.content').slideToggle();
+                });
             }
         });
     </script>
+
 </body>
 </html>
-
