--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,17 @@
         /* Custom Styles */
         body {
             font-family: 'Roboto', sans-serif;
-            background: white;
+            background: #141414;
             margin: 0;
             padding: 0;
-            color: #333;
+            color: #000;
         }
 
         .container {
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9); /* White background with transparency */
+            background-color: black; /* White background with transparency */
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
@@ -31,14 +31,19 @@
             text-align: center;
             font-size: 36px;
             margin-bottom: 20px;
-            text-transform: uppercase;
-            color: #007bff; /* Blue color for headings */
+            background-image: linear-gradient(to right, pink, pink, purple, skyblue, lightgreen, blue, purple, purple);
+            background-clip : text;
+            
+
+            color: transparent;
+            font-family: 'Pacifico', cursive;
         }
+
 
         label {
             font-size: 18px;
             margin-bottom: 10px;
-            color: #555;
+            color: #bbbbbb;
             display: block;
         }
 
@@ -69,7 +74,7 @@
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 10px;
-            color: #007bff;
+            color: #030453;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -184,7 +189,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>AI Tool Finder</h1>
+        <h1>ToolsPocket.ai</h1>
         <form id="toolTypeForm">
             <label for="toolType">Select Tool Type:</label>
             <select id="toolType" name="toolType"></select>
