--- a/templates/index.html
+++ b/templates/index.html
@@ -31,12 +31,11 @@
             text-align: center;
             font-size: 36px;
             margin-bottom: 20px;
-            background-image: linear-gradient(to right, pink, pink, purple, skyblue, lightgreen, blue, purple, purple);
+            background-image: linear-gradient(to right, purple, skyblue);
             background-clip : text;
             
 
             color: transparent;
-            font-family: 'Pacifico', cursive;
         }
 
 
